--- a/apps/mc-pack-tool/package.json
+++ b/apps/mc-pack-tool/package.json
@@ -29,40 +29,40 @@
     "@electron-forge/plugin-fuses": "^7.8.1",
     "@electron-forge/plugin-webpack": "^7.8.1",
     "@electron/fuses": "^1.8.0",
-    "@types/archiver": "^5.1.0",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/uuid": "^9.0.0",
+    "@types/archiver": "^6.0.3",
+    "@types/node": "^24.0.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "@vercel/webpack-asset-relocator-loader": "^1.7.3",
-    "autoprefixer": "^10.4.0",
-    "css-loader": "^6.11.0",
-    "electron": "36.4.0",
+    "@vercel/webpack-asset-relocator-loader": "1.7.3",
+    "autoprefixer": "^10.4.21",
+    "css-loader": "^7.1.2",
+    "electron": "^36.4.0",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.31.0",
-    "fork-ts-checker-webpack-plugin": "^7.3.0",
+    "fork-ts-checker-webpack-plugin": "^9.1.0",
     "node-loader": "^2.1.0",
-    "postcss": "^8.4.0",
-    "postcss-loader": "^7.0.0",
-    "style-loader": "^3.3.4",
-    "tailwindcss": "^3.4.0",
+    "postcss": "^8.5.5",
+    "postcss-loader": "^8.1.1",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^4.1.10",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
-    "typescript": "~4.5.4",
-    "unzipper": "^0.10.14",
+    "typescript": "~5.8.3",
+    "unzipper": "^0.12.3",
     "vitest": "^3.2.3"
   },
   "dependencies": {
-    "archiver": "^5.3.1",
-    "chokidar": "^3.5.3",
+    "archiver": "^7.0.1",
+    "chokidar": "^4.0.3",
     "electron-squirrel-startup": "^1.0.1",
-    "minecraft-assets": "^1.0.0",
-    "minecraft-data": "^3.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "uuid": "^9.0.0",
-    "zod": "^3.22.4"
+    "minecraft-assets": "^1.15.0",
+    "minecraft-data": "^3.89.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "uuid": "^11.1.0",
+    "zod": "^3.25.63"
   }
 }
