--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "dev": "npm --workspace apps/mc-pack-tool run start",
     "lint": "npm --workspace apps/mc-pack-tool run lint",
     "test": "npm --workspace apps/mc-pack-tool run test",
-    "make": "npm --workspace apps/mc-pack-tool run make"
+    "make": "npm --workspace apps/mc-pack-tool run make",
+    "format": "prettier --write ."
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5"
   }
 }
