--- a/apps/mc-pack-tool/package.json
+++ b/apps/mc-pack-tool/package.json
@@ -29,6 +29,8 @@
     "@electron-forge/plugin-fuses": "^7.8.1",
     "@electron-forge/plugin-webpack": "^7.8.1",
     "@electron/fuses": "^1.8.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/archiver": "^6.0.3",
     "@types/node": "^24.0.1",
     "@types/react": "^19.1.8",
@@ -43,6 +45,7 @@
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.31.0",
     "fork-ts-checker-webpack-plugin": "^9.1.0",
+    "jsdom": "^26.1.0",
     "node-loader": "^2.1.0",
     "postcss": "^8.5.5",
     "postcss-loader": "^8.1.1",
