--- a/apps/mc-pack-tool/package.json
+++ b/apps/mc-pack-tool/package.json
@@ -51,6 +51,7 @@
     "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.10",
+    "daisyui": "^4.10.3",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
