--- a/apps/mc-pack-tool/package.json
+++ b/apps/mc-pack-tool/package.json
@@ -30,6 +30,7 @@
     "@electron-forge/plugin-webpack": "^7.8.1",
     "@electron/fuses": "^1.8.0",
     "@testing-library/jest-dom": "^6.6.3",
+    "@tailwindcss/postcss": "^4.1.10",
     "@testing-library/react": "^16.3.0",
     "@types/archiver": "^6.0.3",
     "@types/node": "^24.0.1",
