--- a/apps/mc-pack-tool/package.json
+++ b/apps/mc-pack-tool/package.json
@@ -56,6 +56,7 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
+    "@types/global-agent": "^3.0.0",
     "unzipper": "^0.12.3",
     "vitest": "^3.2.3"
   },
