--- a/apps/mc-pack-tool/tsconfig.json
+++ b/apps/mc-pack-tool/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "target": "ES2024",
     "allowJs": true,
     "module": "commonjs",
     "skipLibCheck": true,
@@ -12,13 +12,9 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "paths": {
-      "*": [
-        "node_modules/*"
-      ]
+      "*": ["node_modules/*"]
     },
-    "jsx": "react"
+    "jsx": "react-jsx"
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
