--- a/apps/mc-pack-tool/package.json
+++ b/apps/mc-pack-tool/package.json
@@ -66,6 +66,7 @@
     "electron-squirrel-startup": "^1.0.1",
     "minecraft-data": "^3.89.0",
     "react": "^19.1.0",
+    "react-canvas-confetti": "^2.0.7",
     "react-dom": "^19.1.0",
     "uuid": "^11.1.0",
     "zod": "^3.25.63",
