Add Suspense loading with spinner

--- a/apps/mc-pack-tool/package.json
+++ b/apps/mc-pack-tool/package.json
@@ -29,10 +29,11 @@
     "@electron-forge/plugin-fuses": "^7.8.1",
     "@electron-forge/plugin-webpack": "^7.8.1",
     "@electron/fuses": "^1.8.0",
-    "@testing-library/jest-dom": "^6.6.3",
     "@tailwindcss/postcss": "^4.1.10",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/archiver": "^6.0.3",
+    "@types/global-agent": "^3.0.0",
     "@types/node": "^24.0.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -42,6 +43,7 @@
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "autoprefixer": "^10.4.21",
     "css-loader": "^7.1.2",
+    "daisyui": "^5.0.43",
     "electron": "^36.4.0",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.31.0",
@@ -52,11 +54,9 @@
     "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.10",
-    "daisyui": "^5.0.43",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
-    "@types/global-agent": "^3.0.0",
     "unzipper": "^0.12.3",
     "vitest": "^3.2.3"
   },
@@ -64,11 +64,12 @@
     "archiver": "^7.0.1",
     "chokidar": "^4.0.3",
     "electron-squirrel-startup": "^1.0.1",
+    "global-agent": "^3.0.0",
     "minecraft-data": "^3.89.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-loader-spinner": "^6.1.6",
     "uuid": "^11.1.0",
-    "zod": "^3.25.63",
-    "global-agent": "^3.0.0"
+    "zod": "^3.25.63"
   }
 }
