--- a/apps/mc-pack-tool/package.json
+++ b/apps/mc-pack-tool/package.json
@@ -58,7 +58,8 @@
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
     "unzipper": "^0.12.3",
-    "vitest": "^3.2.3"
+    "vitest": "^3.2.3",
+    "@testing-library/dom": "^10.4.0"
   },
   "dependencies": {
     "archiver": "^7.0.1",
@@ -71,6 +72,7 @@
     "react-dom": "^19.1.0",
     "react-loader-spinner": "^6.1.6",
     "uuid": "^11.1.0",
-    "zod": "^3.25.63"
+    "zod": "^3.25.63",
+    "unique-names-generator": "^4.7.1"
   }
 }
