--- a/apps/mc-pack-tool/package.json
+++ b/apps/mc-pack-tool/package.json
@@ -10,7 +10,7 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
-    "test": "vitest run",
+    "test": "vitest run --coverage",
     "dev": "electron-forge start"
   },
   "keywords": [],
@@ -30,6 +30,7 @@
     "@electron-forge/plugin-webpack": "^7.8.1",
     "@electron/fuses": "^1.8.0",
     "@tailwindcss/postcss": "^4.1.10",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/archiver": "^6.0.3",
@@ -41,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
+    "@vitest/coverage-v8": "^3.2.3",
     "autoprefixer": "^10.4.21",
     "css-loader": "^7.1.2",
     "daisyui": "^5.0.43",
@@ -58,8 +60,7 @@
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
     "unzipper": "^0.12.3",
-    "vitest": "^3.2.3",
-    "@testing-library/dom": "^10.4.0"
+    "vitest": "^3.2.3"
   },
   "dependencies": {
     "archiver": "^7.0.1",
@@ -71,8 +72,8 @@
     "react-canvas-confetti": "^2.0.7",
     "react-dom": "^19.1.0",
     "react-loader-spinner": "^6.1.6",
+    "unique-names-generator": "^4.7.1",
     "uuid": "^11.1.0",
-    "zod": "^3.25.63",
-    "unique-names-generator": "^4.7.1"
+    "zod": "^3.25.63"
   }
 }
