--- a/apps/mc-pack-tool/package.json
+++ b/apps/mc-pack-tool/package.json
@@ -72,6 +72,7 @@
     "react-canvas-confetti": "^2.0.7",
     "react-dom": "^19.1.0",
     "react-loader-spinner": "^6.1.6",
+    "sharp": "^0.33.5",
     "unique-names-generator": "^4.7.1",
     "uuid": "^11.1.0",
     "zod": "^3.25.63"
