--- a/apps/mc-pack-tool/package.json
+++ b/apps/mc-pack-tool/package.json
@@ -9,7 +9,7 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx .",
+    "lint": "eslint --ext .ts,.tsx src __tests__ *.ts",
     "test": "vitest run --coverage",
     "dev": "electron-forge start"
   },
@@ -39,15 +39,15 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "@vitest/coverage-v8": "^3.2.3",
     "autoprefixer": "^10.4.21",
     "css-loader": "^7.1.2",
     "daisyui": "^5.0.43",
     "electron": "^36.4.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.29.0",
     "eslint-plugin-import": "^2.31.0",
     "fork-ts-checker-webpack-plugin": "^9.1.0",
     "jsdom": "^26.1.0",
