--- a/package.json
+++ b/package.json
@@ -1,18 +1,85 @@
 {
   "name": "minecraft-resource-packer",
+  "productName": "mc-pack-tool",
+  "version": "1.0.0",
+  "description": "Tool for building Minecraft resource packs",
+  "main": ".webpack/main",
   "private": true,
-  "workspaces": [
-    "apps/mc-pack-tool"
-  ],
   "scripts": {
-    "dev": "npm --workspace apps/mc-pack-tool run start",
-    "dev:headless": "xvfb-run -a npm --workspace apps/mc-pack-tool run start -- -- --no-sandbox",
-    "lint": "npm --workspace apps/mc-pack-tool run lint",
-    "test": "npm --workspace apps/mc-pack-tool run test",
-    "make": "npm --workspace apps/mc-pack-tool run make",
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" __tests__ *.ts",
+    "test": "vitest run --coverage",
+    "dev": "electron-forge start",
+    "dev:headless": "xvfb-run -a npm run start -- --no-sandbox",
     "format": "prettier --write ."
   },
+  "keywords": [],
+  "author": {
+    "name": "Codex",
+    "email": "codex@openai.com"
+  },
+  "license": "MIT",
   "devDependencies": {
-    "prettier": "^3.2.5"
+    "@electron-forge/cli": "^7.8.1",
+    "@electron-forge/maker-deb": "^7.8.1",
+    "@electron-forge/maker-rpm": "^7.8.1",
+    "@electron-forge/maker-squirrel": "^7.8.1",
+    "@electron-forge/maker-zip": "^7.8.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.8.1",
+    "@electron-forge/plugin-fuses": "^7.8.1",
+    "@electron-forge/plugin-webpack": "^7.8.1",
+    "@electron/fuses": "^1.8.0",
+    "@tailwindcss/postcss": "^4.1.10",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/archiver": "^6.0.3",
+    "@types/global-agent": "^3.0.0",
+    "@types/node": "^24.0.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
+    "@vercel/webpack-asset-relocator-loader": "1.7.3",
+    "@vitest/coverage-v8": "^3.2.3",
+    "autoprefixer": "^10.4.21",
+    "css-loader": "^7.1.2",
+    "daisyui": "^5.0.43",
+    "electron": "^36.4.0",
+    "eslint": "^9.29.0",
+    "eslint-plugin-import": "^2.31.0",
+    "fork-ts-checker-webpack-plugin": "^9.1.0",
+    "jsdom": "^26.1.0",
+    "node-loader": "^2.1.0",
+    "postcss": "^8.5.5",
+    "postcss-loader": "^8.1.1",
+    "prettier": "^3.2.5",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^4.1.10",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.8.3",
+    "unzipper": "^0.12.3",
+    "vitest": "^3.2.3"
+  },
+  "dependencies": {
+    "archiver": "^7.0.1",
+    "chokidar": "^4.0.3",
+    "electron-squirrel-startup": "^1.0.1",
+    "fuse.js": "^7.1.0",
+    "global-agent": "^3.0.0",
+    "minecraft-data": "^3.89.0",
+    "react": "^19.1.0",
+    "react-canvas-confetti": "^2.0.7",
+    "react-dom": "^19.1.0",
+    "react-loader-spinner": "^6.1.6",
+    "sharp": "^0.34.2",
+    "unique-names-generator": "^4.7.1",
+    "uuid": "^11.1.0",
+    "zod": "^3.25.63"
   }
 }
