--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react": "^19.1.0",
     "react-canvas-confetti": "^2.0.7",
     "react-dom": "^19.1.0",
+    "react-virtualized-auto-sizer": "^1.0.26",
+    "react-window": "^1.8.11",
     "sharp": "^0.34.2",
     "unique-names-generator": "^4.7.1",
     "uuid": "^11.1.0",
