--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "vitest run --coverage",
     "dev": "electron-forge start",
     "dev:headless": "xvfb-run -a electron-forge start -- --no-sandbox",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "archiver": "^7.0.1",
@@ -52,6 +53,7 @@
     "@types/node": "^24.0.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-window": "^1.8.8",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
