--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "archiver": "^7.0.1",
     "chokidar": "^4.0.3",
     "electron-squirrel-startup": "^1.0.1",
+    "electron-store": "^8.2.0",
     "fuse.js": "^7.1.0",
     "global-agent": "^3.0.0",
     "minecraft-data": "^3.89.0",
@@ -28,6 +29,7 @@
     "react-canvas-confetti": "^2.0.7",
     "react-dom": "^19.1.0",
     "react-loader-spinner": "^6.1.6",
+    "react-resizable-panels": "^3.0.3",
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^1.8.11",
     "sharp": "^0.34.2",
