--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "global-agent": "^3.0.0",
     "minecraft-data": "^3.89.0",
     "react": "^19.1.0",
+    "react-arborist": "^3.4.3",
     "react-canvas-confetti": "^2.0.7",
     "react-dom": "^19.1.0",
     "react-loader-spinner": "^6.1.6",
