--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-canvas-confetti": "^2.0.7",
     "react-dom": "^19.1.0",
     "react-resizable-panels": "^3.0.3",
+    "react-router-dom": "^7.6.2",
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^1.8.11",
     "sharp": "^0.34.2",
