--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@monaco-editor/react": "^4.7.0",
     "archiver": "^7.0.1",
     "chokidar": "^4.0.3",
     "electron-squirrel-startup": "^1.0.1",
@@ -26,6 +27,7 @@
     "fuse.js": "^7.1.0",
     "global-agent": "^3.0.0",
     "minecraft-data": "^3.89.0",
+    "monaco-editor": "^0.52.2",
     "react": "^19.1.0",
     "react-arborist": "^3.4.3",
     "react-canvas-confetti": "^2.0.7",
