--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "global-agent": "^3.0.0",
     "minecraft-data": "^3.89.0",
     "monaco-editor": "^0.45.0",
+    "monaco-editor-webpack-plugin": "^7.1.0",
     "react": "^19.1.0",
     "react-arborist": "^3.4.3",
     "react-canvas-confetti": "^2.0.7",
