--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "minecraft-resource-packer",
-  "productName": "mc-pack-tool",
+  "productName": "Minecraft Resource Packer",
   "version": "1.0.0",
   "description": "Tool for building Minecraft resource packs",
   "main": ".webpack/main",
@@ -56,6 +56,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@timfish/forge-externals-plugin": "^0.2.1",
     "@types/archiver": "^6.0.3",
     "@types/global-agent": "^3.0.0",
     "@types/node": "^24.0.1",
