--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@electron-forge/plugin-fuses": "^7.8.1",
     "@electron-forge/plugin-webpack": "^7.8.1",
     "@electron/fuses": "^1.8.0",
+    "@react-three/drei": "^10.3.0",
+    "@react-three/fiber": "^9.1.2",
     "@tailwindcss/postcss": "^4.1.10",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -63,6 +65,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-window": "^1.8.8",
+    "@types/three": "^0.177.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
@@ -82,6 +85,7 @@
     "prettier": "^3.2.5",
     "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.10",
+    "three": "^0.177.0",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
