feat: add advanced texture lab

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chokidar": "^4.0.3",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^8.2.0",
+    "fabric": "^6.7.0",
     "fuse.js": "^7.1.0",
     "global-agent": "^3.0.0",
     "minecraft-data": "^3.89.0",
