--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "sharp": "^0.34.2",
     "unique-names-generator": "^4.7.1",
     "uuid": "^11.1.0",
-    "zod": "^3.25.63"
+    "zod": "^3.25.63",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.8.1",
