--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "sharp": "^0.34.2",
     "unique-names-generator": "^4.7.1",
     "uuid": "^11.1.0",
+    "winston": "^3.17.0",
     "zod": "^3.25.63",
     "zustand": "^5.0.5"
   },
